[project]
name = "pws2025-asakatsu"
version = "0.1.0"
description = "pws2025"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
